<resources>
    <string name="app_name">RoommateApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="expense_you_owe">You Owe / Are Owed</string>
    <string name="expense_activity_header">Expenses</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Grocery strings -->
    <string name="add_grocery_button">Add Grocery</string>
    <string name="title_activity_grocery_list">Grocery List</string>
    <string name="new_grocery_list_name">Grocery Item Name</string>
    <string name="new_expense_list_name">Expense Item Name</string>
    <string name="action_new_grocery">New Grocery</string>
    <string name="action_new_expense">New Expense</string>
    <string name="new_grocery_edittext_default">Enter grocery item name</string>
    <string name="new_grocery_title">New Grocery</string>
    <string name="new_grocery_button_text">Create</string>
    <string name="new_grocery_edittext_quantity_default">Quanitity</string>
    <string name="new_grocery_list_quantity">00</string>
    <string name="title_activity_new_grocery">Create New Grocery</string>
    <string name="title_activity_grocery">GroceryActivity</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="new_grocery_price_text">Price</string>
    <string name="new_grocery_isfor_text">Enter which roommate this is for</string>
    <string name="title_activity_new_expense">IDK</string>
    <string name="new_grocery_select_isfor">Select who this grocery is for:</string>
    <string name="new_grocery_select_addedby">Slect who this grocery is being added by:</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Log In</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="txtOr">Or</string>
    <string name="txtExpense">Expenses</string>
    <string name="txtGroceries">Groceries</string>
    <string name="new_username_edittext_default">Enter a Username</string>
    <string name="new_username_text_default">Username: </string>
    <string name="new_password_edittext_default">Enter a Password</string>
    <string name="new_password_text_default">Password: </string>
    <string name="reenter_password_edittext_default">Re-enter your password</string>
    <string name="reenter_password_text_default">Re-enter Password: </string>
    <string name="new_firstname_edittext_default">Enter Your First Name</string>
    <string name="new_firstname_text_default">First Name: </string>
    <string name="new_lastname_edittext_default">Enter Your Last Name</string>
    <string name="new_lastname_text_default">Last Name: </string>
    <string name="submit">Submit </string>
    <string name="new_expense_edittext_default">Enter expense item name</string>
    <string name="new_expense_select_isfor">Select who paid this expense:</string>
    <string name="new_expense_select_type">Select type of expense:</string>
    <string name="new_date_text">Date</string>



</resources>
