<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="cse5321.roommateapp.SignupActivity">


    <TextView
        android:id="@+id/usernametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_username_text_default"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/new_username_edittext_default"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_below="@+id/usernametxt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordtxt"
        android:hint="@string/new_password_text_default"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/username"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/new_password_edittext_default"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_below="@+id/passwordtxt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstnametxt"
        android:hint="@string/new_firstname_text_default"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/password"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:hint="@string/new_firstname_edittext_default"
        android:layout_below="@+id/firstnametxt"
        android:layout_centerHorizontal="true"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastnametxt"
        android:hint="@string/new_lastname_text_default"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/firstname"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:hint="@string/new_lastname_edittext_default"
        android:layout_below="@+id/lastnametxt"
        android:layout_centerHorizontal="true"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
